Creación de columnas adiionales

--- a/src/notebooks/solution.ipynb
+++ b/src/notebooks/solution.ipynb
@@ -14856,6 +14856,501 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 844 ms\n",
+      "Wall time: 901 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Copy dataframe\n",
+    "syntetic_df = df.copy()\n",
+    "\n",
+    "# New columns\n",
+    "# Temporada alta\n",
+    "syntetic_df['temporada_alta'] = np.where(((syntetic_df['fecha_i'].dt.date >= dt.date(2017, 12, 15)) & \n",
+    "                                         (syntetic_df['fecha_i'].dt.date  <=dt.date(2017, 12, 31))) |\n",
+    "                                         ((syntetic_df['fecha_i'].dt.date >= dt.date(2017, 1, 1)) & \n",
+    "                                         (syntetic_df['fecha_i'].dt.date  <=dt.date(2017, 3, 3))) |\n",
+    "                                         ((syntetic_df['fecha_i'].dt.date  >= dt.date(2017, 7, 15)) & \n",
+    "                                         (syntetic_df['fecha_i'].dt.date  <= dt.date(2017, 7, 31))) |\n",
+    "                                         ((syntetic_df['fecha_i'].dt.date  >= dt.date(2017, 9, 11)) & \n",
+    "                                         (syntetic_df['fecha_i'].dt.date  <= dt.date(2017, 9, 30))), 1, 0)\n",
+    "\n",
+    "# Diferecia de minutos \n",
+    "syntetic_df['df_min'] = (syntetic_df['fecha_o'] - syntetic_df['fecha_i'] ).dt.total_seconds()/60\n",
+    "\n",
+    "# Flag atraso 15+ minutos\n",
+    "syntetic_df['atraso_15'] = np.where(syntetic_df['df_min']>15, 1, 0)\n",
+    "\n",
+    "# Periodo del día \n",
+    "syntetic_df['periodo_dia'] = np.where((syntetic_df['fecha_i'].dt.time >= dt.time(5,0,0)) & (syntetic_df['fecha_i'].dt.time <= dt.time(11,59,59)), 'manana', \n",
+    "                                      np.where((syntetic_df['fecha_i'].dt.time >= dt.time(12, 0, 0)) & (syntetic_df['fecha_i'].dt.time <= dt.time(18,59,59)), 'tarde', 'noche')\n",
+    "\n",
+    "syntetic_df.head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">fecha_i</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>temporada_alta</th>\n",
+       "      <th>fecha_i</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"10\" valign=\"top\">0</th>\n",
+       "      <th>03-March</th>\n",
+       "      <td>2017-03-04 00:35:00</td>\n",
+       "      <td>2017-03-31 23:40:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>04-April</th>\n",
+       "      <td>2017-04-01 00:55:00</td>\n",
+       "      <td>2017-04-30 23:50:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>05-May</th>\n",
+       "      <td>2017-05-01 00:55:00</td>\n",
+       "      <td>2017-05-31 22:50:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>06-June</th>\n",
+       "      <td>2017-06-01 00:05:00</td>\n",
+       "      <td>2017-06-30 23:55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>07-July</th>\n",
+       "      <td>2017-07-01 00:05:00</td>\n",
+       "      <td>2017-07-14 23:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>08-August</th>\n",
+       "      <td>2017-08-01 00:05:00</td>\n",
+       "      <td>2017-08-31 23:50:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>09-September</th>\n",
+       "      <td>2017-09-01 00:30:00</td>\n",
+       "      <td>2017-09-10 23:50:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-October</th>\n",
+       "      <td>2017-10-01 00:10:00</td>\n",
+       "      <td>2017-10-31 23:40:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11-November</th>\n",
+       "      <td>2017-11-01 00:15:00</td>\n",
+       "      <td>2017-11-30 23:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12-December</th>\n",
+       "      <td>2017-12-01 00:25:00</td>\n",
+       "      <td>2017-12-14 23:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">1</th>\n",
+       "      <th>01-January</th>\n",
+       "      <td>2017-01-01 00:15:00</td>\n",
+       "      <td>2017-01-31 23:55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>02-February</th>\n",
+       "      <td>2017-02-01 00:05:00</td>\n",
+       "      <td>2017-02-28 23:55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03-March</th>\n",
+       "      <td>2017-03-01 00:30:00</td>\n",
+       "      <td>2017-03-03 23:55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>07-July</th>\n",
+       "      <td>2017-07-15 00:05:00</td>\n",
+       "      <td>2017-07-31 23:50:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>09-September</th>\n",
+       "      <td>2017-09-11 00:40:00</td>\n",
+       "      <td>2017-09-30 23:50:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12-December</th>\n",
+       "      <td>2017-12-15 00:25:00</td>\n",
+       "      <td>2017-12-31 23:55:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        fecha_i                    \n",
+       "                                            min                 max\n",
+       "temporada_alta fecha_i                                             \n",
+       "0              03-March     2017-03-04 00:35:00 2017-03-31 23:40:00\n",
+       "               04-April     2017-04-01 00:55:00 2017-04-30 23:50:00\n",
+       "               05-May       2017-05-01 00:55:00 2017-05-31 22:50:00\n",
+       "               06-June      2017-06-01 00:05:00 2017-06-30 23:55:00\n",
+       "               07-July      2017-07-01 00:05:00 2017-07-14 23:12:00\n",
+       "               08-August    2017-08-01 00:05:00 2017-08-31 23:50:00\n",
+       "               09-September 2017-09-01 00:30:00 2017-09-10 23:50:00\n",
+       "               10-October   2017-10-01 00:10:00 2017-10-31 23:40:00\n",
+       "               11-November  2017-11-01 00:15:00 2017-11-30 23:45:00\n",
+       "               12-December  2017-12-01 00:25:00 2017-12-14 23:45:00\n",
+       "1              01-January   2017-01-01 00:15:00 2017-01-31 23:55:00\n",
+       "               02-February  2017-02-01 00:05:00 2017-02-28 23:55:00\n",
+       "               03-March     2017-03-01 00:30:00 2017-03-03 23:55:00\n",
+       "               07-July      2017-07-15 00:05:00 2017-07-31 23:50:00\n",
+       "               09-September 2017-09-11 00:40:00 2017-09-30 23:50:00\n",
+       "               12-December  2017-12-15 00:25:00 2017-12-31 23:55:00"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">df_min</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>atraso_15</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-14.00</td>\n",
+       "      <td>15.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16.00</td>\n",
+       "      <td>161.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          df_min       \n",
+       "             min    max\n",
+       "atraso_15              \n",
+       "0         -14.00  15.00\n",
+       "1          16.00 161.00"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">hour</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>periodo_dia</th>\n",
+       "      <th>fecha_i</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"7\" valign=\"top\">manana</th>\n",
+       "      <th>05</th>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>05:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>06</th>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>06:56:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>07</th>\n",
+       "      <td>07:00:00</td>\n",
+       "      <td>07:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>08</th>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>08:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>09</th>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>09:58:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>10:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>11:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"10\" valign=\"top\">noche</th>\n",
+       "      <th>00</th>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>00:55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01</th>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>01:55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>02</th>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>02:55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03</th>\n",
+       "      <td>03:00:00</td>\n",
+       "      <td>03:55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>04</th>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>04:55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19:00:00</td>\n",
+       "      <td>19:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>20:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>21:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>22:00:00</td>\n",
+       "      <td>22:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>23:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"7\" valign=\"top\">tarde</th>\n",
+       "      <th>12</th>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>12:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13:00:00</td>\n",
+       "      <td>13:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>14:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>15:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16:00:00</td>\n",
+       "      <td>16:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>17:00:00</td>\n",
+       "      <td>17:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18:00:00</td>\n",
+       "      <td>18:59:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         hour          \n",
+       "                          min       max\n",
+       "periodo_dia fecha_i                    \n",
+       "manana      05       05:00:00  05:59:00\n",
+       "            06       06:00:00  06:56:00\n",
+       "            07       07:00:00  07:59:00\n",
+       "            08       08:00:00  08:59:00\n",
+       "            09       09:00:00  09:58:00\n",
+       "            10       10:00:00  10:59:00\n",
+       "            11       11:00:00  11:59:00\n",
+       "noche       00       00:00:00  00:55:00\n",
+       "            01       01:00:00  01:55:00\n",
+       "            02       02:00:00  02:55:00\n",
+       "            03       03:00:00  03:55:00\n",
+       "            04       04:00:00  04:55:00\n",
+       "            19       19:00:00  19:59:00\n",
+       "            20       20:00:00  20:59:00\n",
+       "            21       21:00:00  21:59:00\n",
+       "            22       22:00:00  22:59:00\n",
+       "            23       23:00:00  23:59:00\n",
+       "tarde       12       12:00:00  12:59:00\n",
+       "            13       13:00:00  13:59:00\n",
+       "            14       14:00:00  14:59:00\n",
+       "            15       15:00:00  15:59:00\n",
+       "            16       16:00:00  16:59:00\n",
+       "            17       17:00:00  17:59:00\n",
+       "            18       18:00:00  18:59:00"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Validate new columns\n",
+    "syntetic_df.groupby(['temporada_alta', \n",
+    "                     df['fecha_i'].dt.strftime('%m')+'-'+df['fecha_i'].dt.strftime('%B')]).agg({'fecha_i':['min', 'max'],\n",
+    "                         })\n",
+    "                     \n",
+    "syntetic_df.groupby('atraso_15').agg({'df_min':['min', 'max'],})\n",
+    "\n",
+    "syntetic_df['hour'] = syntetic_df['fecha_i'].dt.time\n",
+    "syntetic_df.groupby(['periodo_dia', df['fecha_i'].dt.strftime('%H')]).agg({'hour':['min', 'max'],})\n",
+    "syntetic_df.drop(columns=['hour'], inplace=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to csv\n",
+    "syntetic_df.to_csv('../../data/synthetic_features.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
